Changelog for mk-query-digest:

   * Added --progress (169).

2010-06-08: version 0.9.18

   * Connections did not preserve server SQL modes (issue 801).
   * Added percent of class count to string attribute values (issue 1026).

2010-05-03: version 0.9.17

   * Made --report-format order configurable (issue 990).
   * Changed order of --report-format (issue 935).
   * Added "files" to --report-format (issue 955).
   * Added "date" to --report-format (issue 756).
   * Added --save-results and --[no]gzip (issue 990).
   * --order-by changed the Query_time distribution graph (issue 984).
   * Added --report-histogram (issue 984).
   * Tool crashed immediately on some older versions of Perl (issue 957).

2010-04-01: version 0.9.16

   * Admin commands were not always distilled (issue 676).
   * Admin commands were not fingerprinted correctly (issue 676).
   * General log parsing failed sometimes (issue 926).
   * Some general log timestamps were not parsed (issue 972).
   * IP addresses were truncated (issue 744).
   * Some options could fail to parse (issue 940).
   * InnoDB_*_wait attributes were not formatted as times (issue 948).
   * Added --show-all (issue 744).
   * Added DSN OPTIONS section to POD (issue 55).
   * Fixed performance regression introduced in v0.9.12/r5240 (issue 954).
   * Queries with tables in parentheses did not distill correctly (issue 781).

2010-03-01: version 0.9.15

   * --explain did not report failures.
   * --ask-pass did not work (issue 795).
   * Made D part of --execute DSN as default database (issue 727).
   * --tcpdump didn't work if dumped packet header had extra info (issue 906).
   * Added --type pglog for parsing Postgres logs (issue 535).

2010-02-01: version 0.9.14

   * memcached replace commands were not handled (issue 818).
   * Not all SHOW statements were distilled correctly (issue 735).
   * Tcpdump parsing crashed on certain fragmented queries (issue 832).

2010-01-06: version 0.9.13
