@@ -1,0 +1,30 @@
+
+# Query 1: 1.33 QPS, 0.00x concurrency, ID 0x208AC308FD716D83 at byte 454
+# This item is included in the report because it matches --limit.
+#              pct   total     min     max     avg     95%  stddev  median
+# Count        100       4
+# Exec time    100    51us    12us    13us    12us    12us       0    12us
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Time range 2010-06-24 11:48:27 to 2010-06-24 11:48:30
+# bytes        100     196      45      53      49   51.63    2.57   46.83
+# Query_time distribution
+#   1us
+#  10us  ################################################################
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS LIKE 'products'\G
+#    SHOW CREATE TABLE `products`\G
+# EXPLAIN
+SELECT * FROM `products` ORDER BY name, shape asc\G
+
+# Profile
+# Rank Query ID           Response time     Calls R/Call   Item
+# ==== ================== ================= ===== ======== ===============
+#    1 0x208AC308FD716D83     0.0001 100.0%     4   0.0000 SELECT products
